[package]
name = "junkyardTracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.40", features = ["serde"] }
scraper = "0.20"
regex = "1.0"
dotenv = "0.15"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
